[package]
name = "weakpassword"
version = "0.1.0"
description = "密码爆破程序"
authors = ["kirs"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["rlib"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.98"
socks = "0.3.4"
futures = "0.3"
ssh2 = "0.9.5"
rdp-rs = "0.1.0" 
fastrand = "2.3.0"
sha1 = "0.10.6"
tiberius = "0.12.3"
tokio-util = { version = "0.7.14", features = ["compat"] }
md4 = "0.10.2"
encoding_rs = "0.8.35"
asn1-rs = "0.7.1"
ntlmclient = "0.2.0"
bincode = "1.3.3"
hex = "0.4.3"
tokio-postgres = "0.7.13"
